fix: overflow issue on small width devices

--- a/src/style/skills.css
+++ b/src/style/skills.css
@@ -11,8 +11,11 @@
 
 .mainAnimation {
   justify-self: center;
+  align-self: center;
   grid-row: 1;
   grid-column: 2;
+  height: 350px;
+  width: 350px;
 }
 
 .skills-devops {
@@ -35,7 +38,6 @@
   }
 
   .mainAnimation {
-    justify-self: center;
     grid-row: 1;
     grid-column-start: 1;
     grid-column-end: 3;
@@ -62,7 +64,6 @@
   }
 
   .mainAnimation {
-    justify-self: center;
     grid-row: 1;
     grid-column: 1;
   }
@@ -71,5 +72,12 @@
     justify-self: center;
     grid-row: 3;
     grid-column: 1;
+  }
+}
+
+@media (max-width: 450px) {
+  .mainAnimation {
+    height: 250px;
+    width: 250px;
   }
 }
